[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TestPlayer.gd" type="Script" id=1]
[ext_resource path="res://Sprites/clumsy_shell.png" type="Texture" id=2]
[ext_resource path="res://Sprites/clumsy_crab.png" type="Texture" id=3]
[ext_resource path="res://Sprites/shell_outline.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 33.4425

[sub_resource type="CircleShape2D" id=2]
radius = 18.0198

[sub_resource type="CircleShape2D" id=3]
radius = 204.002

[node name="TestPlayer" type="KinematicBody2D" groups=[
"shell",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SmallCollider" type="CollisionShape2D" parent="."]
position = Vector2( 30, -15 )
shape = SubResource( 2 )

[node name="RayDown" type="RayCast2D" parent="."]
enabled = true

[node name="FlipTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShellSprite" type="Sprite" parent="."]
self_modulate = Color( 0.215686, 0.603922, 0.94902, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
offset = Vector2( 60, 0 )

[node name="CrabSprite" type="Sprite" parent="ShellSprite"]
visible = false
self_modulate = Color( 0.619608, 0.0862745, 0.270588, 1 )
texture = ExtResource( 3 )
offset = Vector2( 60, 0 )

[node name="Sprite" type="Sprite" parent="ShellSprite"]
visible = false
modulate = Color( 0.321569, 0.494118, 0.952941, 1 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
